# ood

./: .gitignore
lab1/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt
lab2/1/: WeatherData.h
lab2/2/: CMakeLists.txt  Observer.h  WeatherData.h  test.cpp
lab2/3/: Observer.h  WeatherData.h  test.cpp
lab2/4/: Observer.h  WeatherData.h  main.cpp  test.cpp
lab3/1/: Beverages.h  CMakeLists.txt  Condiments.h  IBeverage.h  main.cpp
lab3/12/: Beverages.h  CMakeLists.txt  Condiments.h  main.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/libpainter/: CDesigner.cpp  CDesigner.h  CEllipse.cpp  CEllipse.h  CMakeLists.txt  CPainter.cpp  CPainter.h  CPictureDraft.cpp  CPictureDraft.h  CRectangle.cpp  CRectangle.h  CRegularPolygon.cpp  CRegularPolygon.h  CShape.h  CShapeFactory.cpp  CShapeFactory.h  CSvgCanvas.cpp  CSvgCanvas.h  CTriangle.cpp  CTriangle.h  ICanvas.h  IDesigner.h  IShapeFactory.h
lab4/libpainter-tests/: CMakeLists.txt  DesignerTests.cpp
lab5/1/: CMakeLists.txt  main.cpp
lab5/1/src/: AbstractCommand.h  CConstDocumentItem.cpp  CConstDocumentItem.h  CDocument.cpp  CDocument.h  CDocumentItem.cpp  CDocumentItem.h  CEditor.h  CHistory.cpp  CHistory.h  CHtmlSaver.cpp  CHtmlSaver.h  CImage.cpp  CImage.h  CImageImpl.cpp  CMakeLists.txt  CMenu.cpp  CMenu.h  CParagraph.cpp  CParagraph.h  ChangeStringCommand.cpp  ChangeStringCommand.h  Document.cpp  Document.h  Editor.h  History.cpp  History.h  ICommand.h  IDocument.h  IImage.h  ImageImpl.h  Menu.cpp  Menu.h  Paragraph.cpp
lab5/1/src/command/: CAbstractCommand.cpp  CAbstractCommand.h  CAddItemCommand.cpp  CAddItemCommand.h  CChangeStringCommand.cpp  CChangeStringCommand.h  CReplaceTextCommand.hpp  CResizeImageCommand.hpp
lab6/: CMakeLists.txt  main.cpp  uml1.drawio
lab6/src/: CMakeLists.txt  app.h  graphics_lib.h  modern_graphics_lib.h  shape_drawing_lib.h
lab6/tests/: test.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/src/: CCompositeFillStyle.cpp  CCompositeFillStyle.h  CCompositeLineStyle.cpp  CCompositeLineStyle.h  CEllipse.cpp  CEllipse.h  CFillStyle.cpp  CFillStyle.h  CGroupShape.cpp  CGroupShape.h  CLineStyle.cpp  CLineStyle.h  CMakeLists.txt  CRectangle.cpp  CRectangle.h  CShape.cpp  CShape.h  CSimpleShape.h  CSlide.cpp  CSlide.h  CSvgCanvas.cpp  CSvgCanvas.h  CTriangle.cpp  CTriangle.h  CommonTypes.h  ICanvas.h  IDrawable.h  IFillStyle.h  IGroupShape.h  ILineStyle.h  IShape.h  IShapes.h  ISlide.h  IStyleEnumerator.h
lab8/1/: main.cpp
lab8/1/src/: CMakeLists.txt  GumBallMachineWithDynamicallyCreatedState.h  GumBallMachineWithState.h  NaiveGumBallMachine.h
lab8/1/tests/: test.cpp
lab8/2/: CMakeLists.txt  main.cpp
lab8/2/src/: CMakeLists.txt  GumBallMachineWithState.h  NaiveGumBallMachine.h
lab8/2/tests/: test.cpp
lab9/: index.js  lab9.drawio  package.json  webpack.config.js
lab9/src/: main.css  main.ts
lab9/src/common/: CanvasSaver.ts  generateUUID.ts
lab9/src/domain/: Canvas.ts  CanvasSaver.ts  Shape.ts
lab9/src/presenter/: CanvasPresenter.ts  EditorPresenter.ts  SelectionPresenter.ts  ShapePresenter.ts  ToolbarPresenter.ts
lab9/src/view/: ButtonView.ts  CanvasView.ts  EditorView.ts  EllipseView.ts  RectangleView.ts  SelectionView.ts  ShapeView.ts  ToolbarView.ts  TriangleView.ts  View.ts
lab9/src/viewModel/: CanvasVM.ts  EditorVM.ts  SelectionVM.ts  ShapeVM.ts  ToolbarVM.ts
